--- a/DocsifyBuildSidebar/Config/Config.json
+++ b/DocsifyBuildSidebar/Config/Config.json
@@ -1,3 +1,12 @@
 {
-  "HomePath": "E:\\Work\\coding\\xxxue"
+  "HomePath": "E:\\Work\\coding\\xxxue",
+  "IgnoreFile": [
+
+  ],
+  "IgnoreDir": [
+    ".git"
+  ],
+  "IgnoreDirNameContain": [
+    ".assets"
+  ]
 }
