--- a/DocsifyBuildSidebar/DocsifyBuildSidebar.csproj
+++ b/DocsifyBuildSidebar/DocsifyBuildSidebar.csproj
@@ -4,6 +4,7 @@
 		<OutputType>Exe</OutputType>
 		<TargetFramework>net7.0</TargetFramework>
 		<TrimMode>partial</TrimMode>
+		<ImplicitUsings>true</ImplicitUsings>
 	</PropertyGroup>
 
 	<ItemGroup>
