feat: 配置文件支持 "不生成 README.md 文件" #4

--- a/DocsifyBuildSidebar/DocsifyBuildSidebar.csproj
+++ b/DocsifyBuildSidebar/DocsifyBuildSidebar.csproj
@@ -13,7 +13,7 @@
 
 	<ItemGroup>
 		<None Update="Config\Config.json">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</None>
 	</ItemGroup>
 
