--- a/DocsifyBuildSidebar/DocsifyBuildSidebar.csproj
+++ b/DocsifyBuildSidebar/DocsifyBuildSidebar.csproj
@@ -1,16 +1,21 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
-		<TargetFramework>net8.0</TargetFramework>
-		<TrimMode>partial</TrimMode>
+		<TargetFramework>net10.0-windows</TargetFramework>
 		<ImplicitUsings>true</ImplicitUsings>
-		<JsonSerializerIsReflectionEnabledByDefault>true</JsonSerializerIsReflectionEnabledByDefault>
+		<Platforms>x64</Platforms>
+		<PlatformTarget>x64</PlatformTarget>
+		<!-- AOT -->
+		<PublishAot>true</PublishAot>
+		<StripSymbols>true</StripSymbols>
+		<DebugType>none</DebugType>
+		<DebugSymbols>false</DebugSymbols>
 	</PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="Spectre.Console" Version="0.47.0" />
+		<PackageReference Include="Spectre.Console" Version="0.54.0" />
 	</ItemGroup>
 	<ItemGroup>
-		<None Update="Config\Config.json">
+		<None Update="config.json">
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</None>
 	</ItemGroup>
